chore: replace bundled animation jars
Replace the checked-in Timing Framework and Animated Transitions.

Migrate affected examples to Timing Framework 7.4.3 from
`org.bidib.net.java.timingframework:timingframework-swing`
(https://github.com/akuhtz/timingframework) that allows to
remove reflective access.